...

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etAmbassadorEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/et_only"
                        android:fontFamily="sans-serif"
                        android:hint="Email Address *"
...
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/etCustomerEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/et_only"
                        android:fontFamily="sans-serif"
                        android:hint="Email Address *"
...
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/rlCampaignChooser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/et_only"
                        android:paddingBottom="11dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
...
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_expand_more" />

                    </RelativeLayout>

                    <EditText
                        android:id="@+id/etRevenue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/et_only"
                        android:fontFamily="sans-serif"
...
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="Approve commission"
                            android:textColor="#aaaaaa" />

                        <android.support.v7.widget.SwitchCompat
                            android:id="@+id/swConversionApproved"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignParentRight="true" />

                    </RelativeLayout>

...

                </LinearLayout>

            </com.ambassador.app.views.ExpandableLayout>

            <Button
                android:id="@+id/btnConversion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/auth_button"
                android:text="Submit"
...
