...
                android:text="12312412"
                android:textColor="#8d9298"
                android:textSize="11sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/ivCopyUniversalId"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="?android:attr/selectableItemBackground"
                android:paddingBottom="12dp"
...
                android:text="12312412"
                android:textColor="#8d9298"
                android:textSize="11sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/ivCopySdkToken"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="?android:attr/selectableItemBackground"
                android:paddingBottom="12dp"
...
                android:scaleType="fitCenter"
                android:src="@drawable/copy_paste_icon_demo" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlLogout"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="18dp">
...
