<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.main.MainActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/vpPages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tlTabs"
        android:layout_alignParentTop="true" />

    <android.support.design.widget.TabLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/tlTabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabMode="fixed"
        app:tabGravity="fill"
        android:layout_alignParentBottom="true"
        style="@style/TabLayout"/>

</RelativeLayout>
