...
            android:text="* denotes a required field."
            android:textAlignment="center"
            android:textColor="#9097a1"
            android:textSize="9sp" />

        <EditText
            android:id="@+id/etIdentify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
...
                android:layout_height="match_parent"
                android:layout_alignParentRight="true" />

        </RelativeLayout>

        <Button
            android:id="@+id/btnIdentify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="8dp"
...
